Uploaded image for project: 'Kudu'
  1. Kudu
  2. KUDU-1871

Kudu C++ client does not retry on ServiceUnavailable errors

Attach filesAttach ScreenshotVotersWatch issueWatchersCreate sub-taskLinkCloneUpdate Comment AuthorReplace String in CommentUpdate Comment VisibilityDelete Comments
    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Major
    • Resolution: Fixed
    • 1.2.0
    • 1.3.0
    • client
    • None

    Description

      In the interval after master server starts but before it finishes its internal procedures upon becoming a leader, CreateTable() and other leader-only methods respond with ServiceUnavailable error. It makes sense to retry in such cases because master server finishes its leader-related chores quick and then it's ready to serve those requests. However, the Kudu C++ client does not retry in such cases, spitting errors like

      Bad status: Service unavailable: Error creating table all-types-table on the master: Leader not yet ready to serve requests
      

      Attachments

        Activity

          This comment will be Viewable by All Users Viewable by All Users
          Cancel

          People

            aserbin Alexey Serbin
            aserbin Alexey Serbin
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Slack

                Issue deployment