[client] retry operation in case of ServiceUnavailable

KUDU-1871 Kudu C++ client does not retry on ServiceUnavailable errors

Follow the common retry path scenario for Kudu C++ client in case
of ServiceUnavailable error as well, for single- and multi-master
scenarios.

Besides, cleaned up invocation sites of SyncLeaderMasterRpc: moved
handling of ResponsePB::has_error() and converting the PB error into
Status into the code of the SyncLeaderMasterRpc method template.

This commit re-enables ClientTest::TestRetriesOnServiceUnavailable test
which passes with this fix.

Change-Id: Iae169ce1efe3950dfcb769594a1944d05e2ad8e7
Reviewed-on: http://gerrit.cloudera.org:8080/5964
Reviewed-by: Alexey Serbin <aserbin@cloudera.com>
Tested-by: Kudu Jenkins